--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<div class="container" id="info">
 		<h2>Info</h2>
 		<p>
-			<span class="follows">Date of Birth:</span> October 23th, 1997
+			<span class="follows">Birthday:</span> October 23th, 1997
 			<br>
 			<span class="follows">E-mail</span>: jimmygzzmtz@gmail.com
 			<br>
