--- a/index.html
+++ b/index.html
@@ -8,32 +8,73 @@
 	<div class="container" id="top">
 		<h1>Curriculum Vitae: 
 		<br>
-		Jaime Alberto Gonzalez Martinez</h1>
-		<img src="assets/profile.png" alt="Profile Picture" height="200" width="200">
+		Jaime Alberto González Martínez</h1>
+		<img src="assets/profile.jpg" alt="Profile Picture" height="200" width="200">
 	</div>
 	<hr>	
 	<div class="container" id="info">
 		<h2>Info</h2>
-		<p>
-			<span class="follows">Birthday:</span> October 23th, 1997
-			<br>
-			<span class="follows">E-mail</span>: jimmygzzmtz@gmail.com
-			<br>
-			<a href="https://www.github.com/jimmygzzmtz">GitHub</a>
-		</p>
+		<h3>Status</h3>
+		<p>Computer Science student at Tecnológico de Monterrey. Studying Master's Degree in Artificial Intelligence at the University of Essex.</p> 
+		<h3>E-mail</h3>
+		<p>jimmygzzmtz@gmail.com</p> 
+		<h3>GitHub</h3>
+		<a href="https://www.github.com/jimmygzzmtz" target="_blank">https://www.github.com/jimmygzzmtz</a>
 	</div>		
+	<hr>
+	<div class="container" id="info">
+		<h2>Technical Skills</h2>
+		<h3>Programming Languages</h3>
+		<ul>
+			<li>C++</li>
+			<li>Java</li>
+			<li>Swift</li>
+			<li>Typescript</li>
+			<li>Javascript</li>
+		</ul> 
+		<h3>Frameworks</h3>
+		<ul>
+			<li>Ionic</li>
+			<li>Angular</li>
+		</ul> 
+	</div>		
+	<hr>
+	<div class="container" id="info">
+		<h2>My work</h2>
+		<h3>
+			<img src="assets/eZdue_icon.png" alt="eZdue icon" height="50" width="50">
+			<span>eZdue</span>
+		</h3>
+		<h4>Screenshots</h4>
+		<p>
+			<img src="assets/eZdue_screenshot1.png" alt="eZdue icon" height="333" width="188">
+			<img src="assets/eZdue_screenshot2.png" alt="eZdue icon" height="333" width="188">
+			<img src="assets/eZdue_screenshot3.png" alt="eZdue icon" height="333" width="188">
+			<img src="assets/eZdue_screenshot4.png" alt="eZdue icon" height="333" width="188">
+			<img src="assets/eZdue_screenshot5.png" alt="eZdue icon" height="333" width="188">
+		</p>
+		<h4>Description</h4>
+		<p>An easy to use, card-based due-dates manager, focused on productivity and finances. Use natural language to create tasks, see them in cards, and know that is next on your to-do list. In addition, see your financial balance, where your money went in payments or purchases, and credit card info and expiration dates, in the same, easy to use, card format.</p> 
+		<h4>Technologies Used</h4>
+		<p>Firebase for hosting, Angular 8 and Ionic 4 for front-end.</p> 
+		<h4>How to install</h4>
+		<p>eZdue is currently a Progressive Web App, which means it runs on any modern browser and platform. Follow the instructions that show by clicking on the "How to install" label on the Settings page of the app.</p> 
+		<a href="https://ezdue-d5dbc.firebaseapp.com/" target="_blank">Try it!</a>
+	</div>
 	<hr>
 	<div class="container" id="education">
 		<h2>Education</h2>
+		<h3>2019 - Present</h3>
+		<p>MSc Artificial Intelligence at University of Essex</p>
 		<h3>2016 - Present</h3>
 		<p>
-			B.S. Computer Science and Technology (BCT) ITESM-Campus Monterrey
+			B.S. Computer Science and Technology (BCT) at ITESM-Campus Monterrey
 			<br>
-			<span class="follows">Cumulative GPA to date:</span> 94
+			<span class="follows">Cumulative GPA to date:</span> 95
 		</p>
 		<h3>2013 - 2016</h3>
 		<p>
-			International Baccalaureate Diploma Programme (IBDP) ITESM-CSC
+			International Baccalaureate Diploma Programme (IBDP) at ITESM-CSC
 			<br>
 			<span class="follows">Cumulative GPA:</span> 96.53
 		</p>
@@ -69,23 +110,20 @@
 		<p>Euroamerican School of Monterrey Salutatorian Award</p>
 		<h3>2010 - 2013</h3>
 		<p>Euroamerican School of Monterrey Distinguish Honor Roll Awards</p>  
+	</div>		
+	<hr>
+	<div class="container" id="co-curricular achievements">
+		<h2>Co-Curricular Achievements</h2>
+		<h3>2016</h3>
+		<p><span class="follows">Multicultural Award and Student Development Award:</span> ITESM-CSC</p> 
+		<h3>2015</h3>
+		<p><span class="follows">First Place Award:</span> HackPrepas-ITESM CSC</p> 
+		<h3>2013 - 2015</h3>
+		<p><span class="follows">Best Delegate Awards MUNterrey (ITESM-CSC):</span> MUNterrey (ITESM-CSC)</p> 
 	</div>
 	<hr>
 	<div class="container" id="co-curricular activities">
 		<h2>Co-Curricular Activities</h2>
-		<h3>Leadership</h3>
-		<p><span class="follows">Symposiums:</span> MUN</p> 
-		<h3>Programming Languages</h3>
-		<ul>
-		  <li>C++</li>
-		  <li>Java</li>
-		  <li>Swift</li>
-		</ul> 
-		<h3>Frameworks</h3>
-		<ul>
-		  <li>Ionic</li>
-		  <li>Angular</li>
-		</ul> 
 		<h3>Community/Social</h3>
 		<p>Mexico Urbano (ITESM program for tutoring middle school children with limited financial resources)</p>
 		<h3>BCT</h3>
@@ -94,15 +132,4 @@
 		<p>HackPrepas-ITESM CSC 2015</p>  
 	</div>
 	<hr>
-	<div class="container" id="co-curricular achievements">
-		<h2>Co-Curricular Achievements</h2>
-		<h3>2016</h3>
-		<p><span class="follows">Multicultural Award and Student Development Award:</span> ITESM-CSC</p> 
-		<h3>2015</h3>
-		<p>First Place Award, HackPrepas-ITESM CSC</p> 
-		<h3>2013 - 2015</h3>
-		<p>Best Delegate Awards MUNterrey (ITESM-CSC)</p> 
-	</div>
-	<hr>
-
 </body>
