--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
 
 <body>
 	<div class="container" id="top">
-		<h1>Curriculum Vitae: 
-		<br>
-		Jaime Alberto González Martínez</h1>
+		<h1>Jaime Alberto González Martínez</h1>
 		<img src="assets/profile.jpg" alt="Profile Picture" height="200" width="200">
 	</div>
 	<hr>	
@@ -29,8 +27,8 @@
 			<li>C++</li>
 			<li>Java</li>
 			<li>Swift</li>
-			<li>Typescript</li>
-			<li>Javascript</li>
+			<li>TypeScript</li>
+			<li>JavaScript</li>
 		</ul> 
 		<h3>Frameworks</h3>
 		<ul>
@@ -101,15 +99,15 @@
 	<div class="container" id="academic awards">
 		<h2>Academic Awards</h2>
 		<h3>2016 - Present</h3>
-		<p>ITESM-Campus Monterrey Scholarship for Academic Excellence</p> 
+		<p><span class="follows">Scholarship for Academic Excellence:</span> ITESM-Campus Monterrey</p> 
 		<h3>2016</h3>
-		<p>ITESM-CSC Award for Academic Excellence (6th/500 in Class Rank ITESM-CSC)</p> 
+		<p><span class="follows">Award for Academic Excellence (6th/500 in Class Rank ITESM-CSC):</span> ITESM-CSC</p> 
 		<h3>2013 - 2016</h3>
-		<p>ITESM-CSC Scholarship for Academic Excellence</p> 
+		<p><span class="follows">Scholarship for Academic Excellence:</span> ITESM-CSC</p> 
 		<h3>2013</h3>
-		<p>Euroamerican School of Monterrey Salutatorian Award</p>
+		<p><span class="follows">Salutatorian Award:</span> Euroamerican School of Monterrey</p>
 		<h3>2010 - 2013</h3>
-		<p>Euroamerican School of Monterrey Distinguish Honor Roll Awards</p>  
+		<p><span class="follows">Honor Roll Awards:</span> Euroamerican School of Monterrey</p>
 	</div>		
 	<hr>
 	<div class="container" id="co-curricular achievements">
@@ -119,7 +117,7 @@
 		<h3>2015</h3>
 		<p><span class="follows">First Place Award:</span> HackPrepas-ITESM CSC</p> 
 		<h3>2013 - 2015</h3>
-		<p><span class="follows">Best Delegate Awards MUNterrey (ITESM-CSC):</span> MUNterrey (ITESM-CSC)</p> 
+		<p><span class="follows">Best Delegate Awards:</span> MUNterrey (ITESM-CSC)</p> 
 	</div>
 	<hr>
 	<div class="container" id="co-curricular activities">
