--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 		<h3>Status</h3>
 		<p>Computer Science student at Tecnológico de Monterrey. Studying Master's Degree in Artificial Intelligence at the University of Essex.</p> 
 		<h3>E-mail</h3>
-		<p>jimmygzzmtz@gmail.com</p> 
+		<p>jimmygzzmtz@gmail.com</p>
+		<h3>LinkedIn</h3>
+		<a href="https://www.linkedin.com/in/jaime-gonz%C3%A1lez-005758127/" target="_blank">Jaime González</a>
 		<h3>GitHub</h3>
 		<a href="https://www.github.com/jimmygzzmtz" target="_blank">https://www.github.com/jimmygzzmtz</a>
 	</div>		
