Added MailTo Link and Theme Color

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <head>
 	<title>Jaime Alberto Gonzalez</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="index.css">
+	<link rel="stylesheet" type="text/css" href="index.css">
+	<meta name="theme-color" content="#c0392b">
 </head>
 
 <body>
@@ -15,7 +16,7 @@
 		<h3>Status</h3>
 		<p>Computer Science student at Tecnológico de Monterrey. Studying Master's Degree in Artificial Intelligence at the University of Essex.</p> 
 		<h3>E-mail</h3>
-		<p>jimmygzzmtz@gmail.com</p>
+		<a href="mailto:jimmygzzmtz@gmail.com">jimmygzzmtz@gmail.com</a>
 		<h3>LinkedIn</h3>
 		<a href="https://www.linkedin.com/in/jaime-gonz%C3%A1lez-005758127/" target="_blank">Jaime González</a>
 		<h3>GitHub</h3>
