--- a/index.html
+++ b/index.html
@@ -1,24 +1,26 @@
 <head>
-	<title>Jaime Alberto Gonzalez</title>
+	<title>Jaime Alberto Gonzalez Martinez</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="index.css">
 	<meta name="theme-color" content="#c0392b">
+	<meta name="Description" content="Curriculum Vitae for Jaime Alberto González Martínez.">
+	<link rel="icon" type="image/png" href="assets/favicon.ico"/>
 </head>
 
 <body>
 	<div class="container" id="top">
-		<h1>Jaime Alberto González Martínez</h1>
+		<h1>Jaime Alberto Gonzalez Martinez</h1>
 		<img src="assets/profile.jpg" alt="Profile Picture" height="200" width="200">
 	</div>
 	<hr>	
 	<div class="container" id="info">
 		<h2>Info</h2>
 		<h3>Status</h3>
-		<p>Computer Science student at Tecnológico de Monterrey. Studying Master's Degree in Artificial Intelligence at the University of Essex.</p> 
+		<p>Computer Science student at Tecnologico de Monterrey. Studying Master's Degree in Artificial Intelligence at the University of Essex.</p> 
 		<h3>E-mail</h3>
 		<a href="mailto:jimmygzzmtz@gmail.com">jimmygzzmtz@gmail.com</a>
 		<h3>LinkedIn</h3>
-		<a href="https://www.linkedin.com/in/jaime-gonz%C3%A1lez-005758127/" target="_blank">Jaime González</a>
+		<a href="https://www.linkedin.com/in/jaime-gonz%C3%A1lez-005758127/" target="_blank">Jaime Gonzalez</a>
 		<h3>GitHub</h3>
 		<a href="https://www.github.com/jimmygzzmtz" target="_blank">https://www.github.com/jimmygzzmtz</a>
 	</div>		
