--- a/index.html
+++ b/index.html
@@ -59,10 +59,8 @@
 		<h4>Description</h4>
 		<p>An easy to use, card-based due-dates manager, focused on productivity and finances. Use natural language to create tasks, see them in cards, and know that is next on your to-do list. In addition, see your financial balance, where your money went in payments or purchases, and credit card info and expiration dates, in the same, easy to use, card format.</p> 
 		<h4>Technologies Used</h4>
-		<p>Firebase for hosting, Angular 8 and Ionic 4 for front-end.</p> 
-		<h4>How to install</h4>
-		<p>eZdue is currently a Progressive Web App, which means it runs on any modern browser and platform. Follow the instructions that show by clicking on the "How to install" label on the Settings page of the app.</p> 
-		<a href="https://ezdue-d5dbc.firebaseapp.com/" target="_blank">Try it!</a>
+		<p>Firebase for hosting, Angular 8 and Ionic 4 for front-end.</p>
+		<a href="https://ezdue-d5dbc.firebaseapp.com/" target="_blank"><img src="assets/pwa_badge.png" alt="eZdue_pwa_badge"></a> 
 		
 		<h3>
 			<img src="assets/eZlist_icon.png" alt="eZlist icon" height="50" width="50">
@@ -79,10 +77,26 @@
 		<h4>Description</h4>
 		<p>A simple, easy to use, category-based list. Choose a category, insert a name, and write some notes about it.</p> 
 		<h4>Technologies Used</h4>
-		<p>Firebase for hosting, Angular 8 and Ionic 4 for front-end.</p> 
-		<h4>How to install</h4>
-		<p>eZlist is currently a Progressive Web App, which means it runs on any modern browser and platform. Follow the instructions that show by clicking on the "How to install" label on the Settings page of the app.</p> 
-		<a href="https://ezdue-d5dbc.firebaseapp.com/" target="_blank">Try it!</a>
+		<p>Firebase for hosting, Angular 8 and Ionic 4 for front-end.</p>
+		<a href="https://ezlist-af6d1.firebaseapp.com/" target="_blank"><img src="assets/pwa_badge.png" alt="eZlist_pwa_badge"></a>
+
+		<h3>
+			<img src="assets/eZlearn_icon.png" alt="eZlist icon" height="50" width="50">
+			<span>eZlearn</span>
+		</h3>
+		<h4>Screenshots</h4>
+		<p>
+			<img src="assets/eZlearn_screenshot1.png" alt="eZlist Screenshot 1" height="333" width="188">
+			<img src="assets/eZlearn_screenshot2.png" alt="eZlist Screenshot 2" height="333" width="188">
+			<img src="assets/eZlearn_screenshot3.png" alt="eZlist Screenshot 3" height="333" width="188">
+			<img src="assets/eZlearn_screenshot4.png" alt="eZlist Screenshot 4" height="333" width="188">
+			<img src="assets/eZlearn_screenshot5.png" alt="eZlist Screenshot 5" height="333" width="188">
+		</p>
+		<h4>Description</h4>
+		<p>An easy way to memorize terms and definitions, including RPG elements.</p> 
+		<h4>Technologies Used</h4>
+		<p>Firebase for hosting, Angular 8 and Ionic 4 for front-end.</p>
+		<a href="https://ezlearn-58203.firebaseapp.com/" target="_blank"><img src="assets/pwa_badge.png" alt="eZlearn_pwa_badge"></a>
 	</div>
 	<hr>
 	<div class="container" id="education">
