Amazon App Store Links

--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
 		<p>An easy to use, card-based due-dates manager, focused on productivity and finances. Use natural language to create tasks, see them in cards, and know that is next on your to-do list. In addition, see your financial balance, where your money went in payments or purchases, and credit card info and expiration dates, in the same, easy to use, card format.</p> 
 		<h4>Technologies Used</h4>
 		<p>Firebase for hosting, Angular 8 and Ionic 4 for front-end.</p>
-		<a href="https://ezdue-d5dbc.firebaseapp.com/" target="_blank"><img src="assets/pwa_badge.png" alt="eZdue_pwa_badge"></a> 
+		<a href="https://ezdue-d5dbc.firebaseapp.com/" target="_blank"><img src="assets/pwa_badge.png" alt="eZdue_pwa_badge"></a>
+		<a href="https://www.amazon.com/dp/B07YSSYR7T/ref=apps_sf_sta" target="_blank"><img src="assets/amazon_badge.png" alt="eZlearn_pwa_badge"></a> 
 		
 		<h3>
 			<img src="assets/eZlist_icon.png" alt="eZlist icon" height="50" width="50">
@@ -79,6 +80,7 @@
 		<h4>Technologies Used</h4>
 		<p>Firebase for hosting, Angular 8 and Ionic 4 for front-end.</p>
 		<a href="https://ezlist-af6d1.firebaseapp.com/" target="_blank"><img src="assets/pwa_badge.png" alt="eZlist_pwa_badge"></a>
+		<a href="https://www.amazon.com/dp/B07YSVVXH2/ref=apps_sf_sta" target="_blank"><img src="assets/amazon_badge.png" alt="eZlearn_pwa_badge"></a> 
 
 		<h3>
 			<img src="assets/eZlearn_icon.png" alt="eZlist icon" height="50" width="50">
