Google Play Links

--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
 		<h4>Technologies Used</h4>
 		<p>Firebase for hosting, Angular 8 and Ionic 4 for front-end.</p>
 		<a href="https://ezdue-d5dbc.firebaseapp.com/" target="_blank"><img src="assets/pwa_badge.png" alt="eZdue_pwa_badge"></a>
-		<a href="https://www.amazon.com/dp/B07YSSYR7T/ref=apps_sf_sta" target="_blank"><img src="assets/amazon_badge.png" alt="eZlearn_pwa_badge"></a> 
+		<a href="https://www.amazon.com/dp/B07YSSYR7T/ref=apps_sf_sta" target="_blank"><img src="assets/amazon_badge.png" alt="eZdue_amazon_badge"></a>
+		<a href="https://play.google.com/store/apps/details?id=com.jimmygzzmtz.eZdue" target="_blank"><img src="assets/googleplay_badge.png" alt="eZdue_googleplay_badge"></a>  
 		
 		<h3>
 			<img src="assets/eZlist_icon.png" alt="eZlist icon" height="50" width="50">
@@ -80,7 +81,8 @@
 		<h4>Technologies Used</h4>
 		<p>Firebase for hosting, Angular 8 and Ionic 4 for front-end.</p>
 		<a href="https://ezlist-af6d1.firebaseapp.com/" target="_blank"><img src="assets/pwa_badge.png" alt="eZlist_pwa_badge"></a>
-		<a href="https://www.amazon.com/dp/B07YSVVXH2/ref=apps_sf_sta" target="_blank"><img src="assets/amazon_badge.png" alt="eZlearn_pwa_badge"></a> 
+		<a href="https://www.amazon.com/dp/B07YSVVXH2/ref=apps_sf_sta" target="_blank"><img src="assets/amazon_badge.png" alt="eZlist_amazon_badge"></a>
+		<a href="https://play.google.com/store/apps/details?id=com.jimmygzzmtz.eZlist" target="_blank"><img src="assets/googleplay_badge.png" alt="eZlist_googleplay_badge"></a> 
 
 		<h3>
 			<img src="assets/eZlearn_icon.png" alt="eZlist icon" height="50" width="50">
