--- a/index.html
+++ b/index.html
@@ -34,11 +34,17 @@
 			<li>Swift</li>
 			<li>TypeScript</li>
 			<li>JavaScript</li>
+			<li>Python</li>
 		</ul> 
 		<h3>Frameworks</h3>
 		<ul>
 			<li>Ionic</li>
 			<li>Angular</li>
+		</ul> 
+		<h3>Libraries</h3>
+		<ul>
+			<li>TensorFlow</li>
+			<li>Scikit-learn</li>
 		</ul> 
 	</div>		
 	<hr>
