--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<div class="container" id="info">
 		<h2>Info</h2>
 		<h3>Status</h3>
-		<p>Computer Science student at Tecnologico de Monterrey. Studying Master's Degree in Artificial Intelligence at the University of Essex.</p> 
+		<p>Computer Science student at Tecnologico de Monterrey.<br>Studying Master's Degree in Artificial Intelligence at the University of Essex.</p> 
 		<h3>E-mail</h3>
 		<a href="mailto:jimmygzzmtz@gmail.com">jimmygzzmtz@gmail.com</a>
 		<h3>LinkedIn</h3>
@@ -24,90 +24,6 @@
 		<h3>GitHub</h3>
 		<a href="https://www.github.com/jimmygzzmtz" target="_blank">https://www.github.com/jimmygzzmtz</a>
 	</div>		
-	<hr>
-	<div class="container" id="info">
-		<h2>Technical Skills</h2>
-		<h3>Programming Languages</h3>
-		<ul>
-			<li>C++</li>
-			<li>Java</li>
-			<li>Swift</li>
-			<li>TypeScript</li>
-			<li>JavaScript</li>
-			<li>Python</li>
-		</ul> 
-		<h3>Frameworks</h3>
-		<ul>
-			<li>Ionic</li>
-			<li>Angular</li>
-		</ul> 
-		<h3>Libraries</h3>
-		<ul>
-			<li>TensorFlow</li>
-			<li>Scikit-learn</li>
-		</ul> 
-	</div>		
-	<hr>
-	<div class="container" id="info">
-		<h2>My work</h2>
-		<h3>
-			<img src="assets/eZdue_icon.png" alt="eZdue icon" height="50" width="50">
-			<span>eZdue</span>
-		</h3>
-		<h4>Screenshots</h4>
-		<p>
-			<img src="assets/eZdue_screenshot1.png" alt="eZdue Screenshot 1" height="333" width="188">
-			<img src="assets/eZdue_screenshot2.png" alt="eZdue Screenshot 2" height="333" width="188">
-			<img src="assets/eZdue_screenshot3.png" alt="eZdue Screenshot 3" height="333" width="188">
-			<img src="assets/eZdue_screenshot4.png" alt="eZdue Screenshot 4" height="333" width="188">
-			<img src="assets/eZdue_screenshot5.png" alt="eZdue Screenshot 5" height="333" width="188">
-		</p>
-		<h4>Description</h4>
-		<p>An easy to use, card-based due-dates manager, focused on productivity and finances. Use natural language to create tasks, see them in cards, and know that is next on your to-do list. In addition, see your financial balance, where your money went in payments or purchases, and credit card info and expiration dates, in the same, easy to use, card format.</p> 
-		<h4>Technologies Used</h4>
-		<p>Firebase for hosting, Angular 8 and Ionic 4 for front-end.</p>
-		<a href="https://ezdue-d5dbc.firebaseapp.com/" target="_blank"><img src="assets/pwa_badge.png" alt="eZdue_pwa_badge"></a>
-		<a href="https://www.amazon.com/dp/B07YSSYR7T/ref=apps_sf_sta" target="_blank"><img src="assets/amazon_badge.png" alt="eZdue_amazon_badge"></a>
-		<a href="https://play.google.com/store/apps/details?id=com.jimmygzzmtz.eZdue" target="_blank"><img src="assets/googleplay_badge.png" alt="eZdue_googleplay_badge"></a>  
-		
-		<h3>
-			<img src="assets/eZlist_icon.png" alt="eZlist icon" height="50" width="50">
-			<span>eZlist</span>
-		</h3>
-		<h4>Screenshots</h4>
-		<p>
-			<img src="assets/eZlist_screenshot1.png" alt="eZlist Screenshot 1" height="333" width="188">
-			<img src="assets/eZlist_screenshot2.png" alt="eZlist Screenshot 2" height="333" width="188">
-			<img src="assets/eZlist_screenshot3.png" alt="eZlist Screenshot 3" height="333" width="188">
-			<img src="assets/eZlist_screenshot4.png" alt="eZlist Screenshot 4" height="333" width="188">
-			<img src="assets/eZlist_screenshot5.png" alt="eZlist Screenshot 5" height="333" width="188">
-		</p>
-		<h4>Description</h4>
-		<p>A simple, easy to use, category-based list. Choose a category, insert a name, and write some notes about it.</p> 
-		<h4>Technologies Used</h4>
-		<p>Firebase for hosting, Angular 8 and Ionic 4 for front-end.</p>
-		<a href="https://ezlist-af6d1.firebaseapp.com/" target="_blank"><img src="assets/pwa_badge.png" alt="eZlist_pwa_badge"></a>
-		<a href="https://www.amazon.com/dp/B07YSVVXH2/ref=apps_sf_sta" target="_blank"><img src="assets/amazon_badge.png" alt="eZlist_amazon_badge"></a>
-		<a href="https://play.google.com/store/apps/details?id=com.jimmygzzmtz.eZlist" target="_blank"><img src="assets/googleplay_badge.png" alt="eZlist_googleplay_badge"></a> 
-
-		<h3>
-			<img src="assets/eZlearn_icon.png" alt="eZlist icon" height="50" width="50">
-			<span>eZlearn</span>
-		</h3>
-		<h4>Screenshots</h4>
-		<p>
-			<img src="assets/eZlearn_screenshot1.png" alt="eZlist Screenshot 1" height="333" width="188">
-			<img src="assets/eZlearn_screenshot2.png" alt="eZlist Screenshot 2" height="333" width="188">
-			<img src="assets/eZlearn_screenshot3.png" alt="eZlist Screenshot 3" height="333" width="188">
-			<img src="assets/eZlearn_screenshot4.png" alt="eZlist Screenshot 4" height="333" width="188">
-			<img src="assets/eZlearn_screenshot5.png" alt="eZlist Screenshot 5" height="333" width="188">
-		</p>
-		<h4>Description</h4>
-		<p>An easy way to memorize terms and definitions, including RPG elements.</p> 
-		<h4>Technologies Used</h4>
-		<p>Firebase for hosting, Angular 8 and Ionic 4 for front-end.</p>
-		<a href="https://ezlearn-58203.firebaseapp.com/" target="_blank"><img src="assets/pwa_badge.png" alt="eZlearn_pwa_badge"></a>
-	</div>
 	<hr>
 	<div class="container" id="education">
 		<h2>Education</h2>
@@ -117,66 +33,91 @@
 		<p>
 			B.S. Computer Science and Technology (BCT) at ITESM-Campus Monterrey
 			<br>
-			<span class="follows">Cumulative GPA to date:</span> 95
-		</p>
-		<h3>2013 - 2016</h3>
-		<p>
-			International Baccalaureate Diploma Programme (IBDP) at ITESM-CSC
-			<br>
-			<span class="follows">Cumulative GPA:</span> 96.53
-		</p>
-		<h3>2010 - 2013</h3>
-		<p>
-			Euroamerican School of Monterrey
-			<br>
-			<span class="follows">Cumulative GPA:</span> 97
+			<span class="follows">Cumulative GPA to date:</span> 96
 		</p>
 	</div>
 	<hr>
-	<div class="container" id="languages">
-		<h2>Languages</h2>
-		<h3>IRL Level 5 - Native</h3>
-		<p>Spanish</p>
-		<h3>IRL Level 5 - Bilingual</h3>
-		<p>English</p> 
-		<h3>IRL Level 1</h3>
-		<p>Italian</p> 
-		<h3>IRL Level 2</h3>
-		<p>German</p> 
+	<div class="container" id="info">
+		<h2>Major Projects</h2>
+		<h3>
+			<img src="assets/geminai_icon.png" alt="eZdue icon" height="50" width="50">
+			<span>GeminAI</span>
+			<span style="float:right;">April - August 2020</span>
+		</h3>
+		<h4>A hybrid chatbot based on AIML and a Seq2Seq model</h4>
+		<p>
+			<img class="center" src="assets/geminai_screenshot.png" alt="GeminAI Screenshot">
+		</p>
+		<ul>
+			<li>Designed and developed the back-end using Python in Google Cloud Run.</li>
+			<li>Integrated GeminAI with tools from DuckDuckGo, DialogFlow, TensorFlow, AIML, and others.</li>
+			<li>This application was developed for the MSc Dissertation, along with a thesis.</li>
+		</ul> 
+		<h3>
+			<img src="assets/vibe_icon.png" alt="eZdue icon" height="50" width="50">
+			<span>Vibe</span>
+			<span style="float:right;">January - March 2020</span>
+		</h3>
+		<h4>An application that allows users to detect their current emotion by analyzing their face</h4>
+		<p>
+			<img class="center" src="assets/vibe_screenshot.png" alt="Vibe Screenshot">
+		</p>
+		<ul>
+			<li>Designed the front-end of the application in Ionic and Angular.</li>
+			<li>Collaborated with colleagues to integrate it with a back-end model hosted in Google Cloud Run.</li>
+			<li>This application was developed for Centro Puzzle, a rehabilitation center in Italy.</li>
+		</ul> 
+		<h3>
+			<img src="assets/prodactiv_icon.png" alt="eZdue icon" height="50" width="50">
+			<span>prodActiv</span>
+			<span style="float:right;">January - May 2019</span>
+		</h3>
+		<h4>An iOS graphical task manager in Swift 4</h4>
+		<p>
+			<img class="center" src="assets/prodactiv_screenshot.png" alt="Vibe Screenshot">
+		</p>
+		<ul>
+			<li>Collaborated with colleagues to develop the application for an iOS class.</li>
+			<li>Built using card-based graphical interface, along with extensive use of RegEx and notifications.</li>
+			<li><a href="https://github.com/jimmygzzmtz/prodActiv" target="_blank">Open Source.</a></li>
+		</ul> 
+		<h3>
+			<img src="assets/poiapp_icon.png" alt="eZdue icon" height="50" width="50">
+			<span>POIAPP & POI-API</span>
+			<span style="float:right;">January - May 2019</span>
+		</h3>
+		<h4>A crowd-sourced Points of Interest back-end and Progressive Web App</h4>
+		<p>
+			<img class="center" src="assets/poiapp_screenshot.jpg" alt="Vibe Screenshot">
+		</p>
+		<ul>
+			<li>Collaborated with Ariel Méndez to develop the front-end in Ionic and back-end in MongoDB.</li>
+			<li>Designed and developed the user-interface and database.</li>
+			<li><a href="https://github.com/jimmygzzmtz/POIAPP" target="_blank">Open</a><a href="https://github.com/jimmygzzmtz/POI-API" target="_blank"> Source.</a></li>
+		</ul> 
 	</div>
 	<hr>
-	<div class="container" id="academic awards">
-		<h2>Academic Awards</h2>
-		<h3>2016 - Present</h3>
-		<p><span class="follows">Scholarship for Academic Excellence:</span> ITESM-Campus Monterrey</p> 
-		<h3>2016</h3>
-		<p><span class="follows">Award for Academic Excellence (6th/500 in Class Rank ITESM-CSC):</span> ITESM-CSC</p> 
-		<h3>2013 - 2016</h3>
-		<p><span class="follows">Scholarship for Academic Excellence:</span> ITESM-CSC</p> 
-		<h3>2013</h3>
-		<p><span class="follows">Salutatorian Award:</span> Euroamerican School of Monterrey</p>
-		<h3>2010 - 2013</h3>
-		<p><span class="follows">Honor Roll Awards:</span> Euroamerican School of Monterrey</p>
+	<div class="container" id="info">
+		<h2>Skills</h2>
+		<h3>Programming Languages</h3>
+		<ul>
+			<li>6 years: Java</li>
+			<li>4 years: C++</li>
+			<li>2 years: Python, TypeScript, JavaScript</li>
+		</ul> 
+		<h3>Awards</h3>
+		<ul>
+			<li>Academic Excellence at ITESM (2016-Present)</li>
+			<li>1st Place in the HackPrepas-ITESM (2015)</li>
+		</ul> 
+		<h3>Technologies</h3>
+		<ul>
+			<li>HTML, CSS, JQuery, Express, SQL, MongoDB (NoSQL), Git, Google Cloud, Heroku, Android SDK, iOS SDK, Ionic, Angular, Unix/Bash, TensorFlow</li>
+		</ul> 
+		<h3>ONLINE COURSES </h3>
+		<ul>
+			<li>M001: MongoDB Basics (MongoDB University, 2018)</li>
+		</ul> 
 	</div>		
-	<hr>
-	<div class="container" id="co-curricular achievements">
-		<h2>Co-Curricular Achievements</h2>
-		<h3>2016</h3>
-		<p><span class="follows">Multicultural Award and Student Development Award:</span> ITESM-CSC</p> 
-		<h3>2015</h3>
-		<p><span class="follows">First Place Award:</span> HackPrepas-ITESM CSC</p> 
-		<h3>2013 - 2015</h3>
-		<p><span class="follows">Best Delegate Awards:</span> MUNterrey (ITESM-CSC)</p> 
-	</div>
-	<hr>
-	<div class="container" id="co-curricular activities">
-		<h2>Co-Curricular Activities</h2>
-		<h3>Community/Social</h3>
-		<p>Mexico Urbano (ITESM program for tutoring middle school children with limited financial resources)</p>
-		<h3>BCT</h3>
-		<p>HackMTY-ITESM Campus Monterrey 2016</p>
-		<h3>ITESM-CSC</h3>
-		<p>HackPrepas-ITESM CSC 2015</p>  
-	</div>
 	<hr>
 </body>
