--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" type="text/css" href="index.css">
 	<meta name="theme-color" content="#c0392b">
 	<meta name="Description" content="Curriculum Vitae for Jaime Alberto González Martínez.">
-	<link rel="icon" type="image/png" href="assets/favicon.ico"/>
+	<link rel="icon" type="image/png" href="assets/favicon.jpg"/>
 </head>
 
 <body>
@@ -15,8 +15,6 @@
 	<hr>	
 	<div class="container" id="info">
 		<h2>Info</h2>
-		<h3>Status</h3>
-		<p>Computer Science student at Tecnologico de Monterrey.<br>Studying Master's Degree in Artificial Intelligence at the University of Essex.</p> 
 		<h3>E-mail</h3>
 		<a href="mailto:jimmygzzmtz@gmail.com">jimmygzzmtz@gmail.com</a>
 		<h3>LinkedIn</h3>
@@ -27,18 +25,32 @@
 	<hr>
 	<div class="container" id="education">
 		<h2>Education</h2>
-		<h3>2019 - Present</h3>
+		<h3>2019 - 2020</h3>
 		<p>MSc Artificial Intelligence at University of Essex</p>
-		<h3>2016 - Present</h3>
+		<h3>2016 - 2020</h3>
 		<p>
 			B.S. Computer Science and Technology (BCT) at ITESM-Campus Monterrey
 			<br>
-			<span class="follows">Cumulative GPA to date:</span> 96
+			<span class="follows">Cumulative GPA:</span> 96.3
 		</p>
 	</div>
 	<hr>
 	<div class="container" id="info">
 		<h2>Major Projects</h2>
+		<h3>
+			<img src="assets/progriscript_icon.png" alt="eZdue icon" height="50" width="50">
+			<span>ProgriScript</span>
+			<span style="float:right;">August - December 2020</span>
+		</h3>
+		<h4>A progressive web app that compiles, runs, and teaches the user about the ProgriScript language.</h4>
+		<p>
+			<img class="center" src="assets/progriscript_screenshot.png" alt="ProgriScript Screenshot">
+		</p>
+		<ul>
+			<li>Collaborated with Raul Hernandez to develop the compiler and virtual machine in JavaScript, using Jison.</li>
+			<li>Designed and developed the user-interface in Ionic.</li>
+			<li><a href="https://github.com/jimmygzzmtz/ProgriScript" target="_blank">Open Source.</a></li>
+		</ul> 
 		<h3>
 			<img src="assets/geminai_icon.png" alt="eZdue icon" height="50" width="50">
 			<span>GeminAI</span>
@@ -91,7 +103,7 @@
 			<img class="center" src="assets/poiapp_screenshot.jpg" alt="Vibe Screenshot">
 		</p>
 		<ul>
-			<li>Collaborated with Ariel Méndez to develop the front-end in Ionic and back-end in MongoDB.</li>
+			<li>Collaborated with Ariel Mendez to develop the front-end in Ionic and back-end in MongoDB.</li>
 			<li>Designed and developed the user-interface and database.</li>
 			<li><a href="https://github.com/jimmygzzmtz/POIAPP" target="_blank">Open</a><a href="https://github.com/jimmygzzmtz/POI-API" target="_blank"> Source.</a></li>
 		</ul> 
