--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
 		</p>
 	</div>
 	<hr>
+	<div class="container" id="education">
+		<h2>Work Experience</h2>
+		<h3>2021 - Present</h3>
+		<p>Full Stack Engineer at Intelimotor</p>
+	</div>
+	<hr>
 	<div class="container" id="info">
 		<h2>Major Projects</h2>
 		<h3>
@@ -124,7 +130,7 @@
 		</ul> 
 		<h3>Technologies</h3>
 		<ul>
-			<li>HTML, CSS, JQuery, Express, SQL, MongoDB (NoSQL), Git, Google Cloud, Heroku, Android SDK, iOS SDK, Ionic, Angular, Unix/Bash, TensorFlow</li>
+			<li>HTML, CSS, JQuery, Express, SQL, MongoDB (NoSQL), Git, Google Cloud, Heroku, Android SDK, iOS SDK, Ionic, Angular, React, Puppeteer, Unix/Bash, TensorFlow</li>
 		</ul> 
 		<h3>ONLINE COURSES </h3>
 		<ul>
