--- a/index.html
+++ b/index.html
@@ -1,141 +1,12 @@
-<head>
-	<title>Jaime Alberto Gonzalez Martinez</title>
-	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="index.css">
-	<meta name="theme-color" content="#c0392b">
-	<meta name="Description" content="Curriculum Vitae for Jaime Alberto González Martínez.">
-	<link rel="icon" type="image/png" href="assets/favicon.jpg"/>
-</head>
-
-<body>
-	<div class="container" id="top">
-		<h1>Jaime Alberto Gonzalez Martinez</h1>
-		<img src="assets/profile.jpg" alt="Profile Picture" height="200" width="200">
-	</div>
-	<hr>	
-	<div class="container" id="info">
-		<h2>Info</h2>
-		<h3>E-mail</h3>
-		<a href="mailto:jimmygzzmtz@gmail.com">jimmygzzmtz@gmail.com</a>
-		<h3>LinkedIn</h3>
-		<a href="https://www.linkedin.com/in/jaime-gonz%C3%A1lez-005758127/" target="_blank">Jaime Gonzalez</a>
-		<h3>GitHub</h3>
-		<a href="https://www.github.com/jimmygzzmtz" target="_blank">https://www.github.com/jimmygzzmtz</a>
-	</div>		
-	<hr>
-	<div class="container" id="education">
-		<h2>Education</h2>
-		<h3>2019 - 2020</h3>
-		<p>MSc Artificial Intelligence at University of Essex</p>
-		<h3>2016 - 2020</h3>
-		<p>
-			B.S. Computer Science and Technology (BCT) at ITESM-Campus Monterrey
-			<br>
-			<span class="follows">Cumulative GPA:</span> 96.3
-		</p>
-	</div>
-	<hr>
-	<div class="container" id="education">
-		<h2>Work Experience</h2>
-		<h3>2021 - Present</h3>
-		<p>Full Stack Engineer at Intelimotor</p>
-	</div>
-	<hr>
-	<div class="container" id="info">
-		<h2>Major Projects</h2>
-		<h3>
-			<img src="assets/progriscript_icon.png" alt="eZdue icon" height="50" width="50">
-			<span>ProgriScript</span>
-			<span style="float:right;">August - December 2020</span>
-		</h3>
-		<h4>A progressive web app that compiles, runs, and teaches the user about the ProgriScript language.</h4>
-		<p>
-			<img class="center" src="assets/progriscript_screenshot.png" alt="ProgriScript Screenshot">
-		</p>
-		<ul>
-			<li>Collaborated with Raul Hernandez to develop the compiler and virtual machine in JavaScript, using Jison.</li>
-			<li>Designed and developed the user-interface in Ionic.</li>
-			<li><a href="https://github.com/jimmygzzmtz/ProgriScript" target="_blank">Open Source.</a></li>
-		</ul> 
-		<h3>
-			<img src="assets/geminai_icon.png" alt="eZdue icon" height="50" width="50">
-			<span>GeminAI</span>
-			<span style="float:right;">April - August 2020</span>
-		</h3>
-		<h4>A hybrid chatbot based on AIML and a Seq2Seq model</h4>
-		<p>
-			<img class="center" src="assets/geminai_screenshot.png" alt="GeminAI Screenshot">
-		</p>
-		<ul>
-			<li>Designed and developed the back-end using Python in Google Cloud Run.</li>
-			<li>Integrated GeminAI with tools from DuckDuckGo, DialogFlow, TensorFlow, AIML, and others.</li>
-			<li>This application was developed for the MSc Dissertation, along with a thesis.</li>
-		</ul> 
-		<h3>
-			<img src="assets/vibe_icon.png" alt="eZdue icon" height="50" width="50">
-			<span>Vibe</span>
-			<span style="float:right;">January - March 2020</span>
-		</h3>
-		<h4>An application that allows users to detect their current emotion by analyzing their face</h4>
-		<p>
-			<img class="center" src="assets/vibe_screenshot.png" alt="Vibe Screenshot">
-		</p>
-		<ul>
-			<li>Designed the front-end of the application in Ionic and Angular.</li>
-			<li>Collaborated with colleagues to integrate it with a back-end model hosted in Google Cloud Run.</li>
-			<li>This application was developed for Centro Puzzle, a rehabilitation center in Italy.</li>
-		</ul> 
-		<h3>
-			<img src="assets/prodactiv_icon.png" alt="eZdue icon" height="50" width="50">
-			<span>prodActiv</span>
-			<span style="float:right;">January - May 2019</span>
-		</h3>
-		<h4>An iOS graphical task manager in Swift 4</h4>
-		<p>
-			<img class="center" src="assets/prodactiv_screenshot.png" alt="Vibe Screenshot">
-		</p>
-		<ul>
-			<li>Collaborated with colleagues to develop the application for an iOS class.</li>
-			<li>Built using card-based graphical interface, along with extensive use of RegEx and notifications.</li>
-			<li><a href="https://github.com/jimmygzzmtz/prodActiv" target="_blank">Open Source.</a></li>
-		</ul> 
-		<h3>
-			<img src="assets/poiapp_icon.png" alt="eZdue icon" height="50" width="50">
-			<span>POIAPP & POI-API</span>
-			<span style="float:right;">January - May 2019</span>
-		</h3>
-		<h4>A crowd-sourced Points of Interest back-end and Progressive Web App</h4>
-		<p>
-			<img class="center" src="assets/poiapp_screenshot.jpg" alt="Vibe Screenshot">
-		</p>
-		<ul>
-			<li>Collaborated with Ariel Mendez to develop the front-end in Ionic and back-end in MongoDB.</li>
-			<li>Designed and developed the user-interface and database.</li>
-			<li><a href="https://github.com/jimmygzzmtz/POIAPP" target="_blank">Open</a><a href="https://github.com/jimmygzzmtz/POI-API" target="_blank"> Source.</a></li>
-		</ul> 
-	</div>
-	<hr>
-	<div class="container" id="info">
-		<h2>Skills</h2>
-		<h3>Programming Languages</h3>
-		<ul>
-			<li>6 years: Java</li>
-			<li>4 years: C++</li>
-			<li>2 years: Python, TypeScript, JavaScript</li>
-		</ul> 
-		<h3>Awards</h3>
-		<ul>
-			<li>Academic Excellence at ITESM (2016-Present)</li>
-			<li>1st Place in the HackPrepas-ITESM (2015)</li>
-		</ul> 
-		<h3>Technologies</h3>
-		<ul>
-			<li>HTML, CSS, JQuery, Express, SQL, MongoDB (NoSQL), Git, Google Cloud, Heroku, Android SDK, iOS SDK, Ionic, Angular, React, Puppeteer, Unix/Bash, TensorFlow</li>
-		</ul> 
-		<h3>ONLINE COURSES </h3>
-		<ul>
-			<li>M001: MongoDB Basics (MongoDB University, 2018)</li>
-		</ul> 
-	</div>		
-	<hr>
-</body>
+<!DOCTYPE html>
+<html lang="en">
+  <title>Jaime Alberto Gonzalez Martinez</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.esm.js"></script>
+  <script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ionic/core/css/ionic.bundle.css" />
+  <link rel="stylesheet" href="./index.css">
+  <link rel="icon" href="./assets/favicon.ico" />
+  <script type="module" src="./index.js"></script>
+  <body></body>
+</html>
