--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ionic/core/css/ionic.bundle.css" />
   <link rel="stylesheet" href="./index.css">
   <link rel="icon" href="./assets/favicon.ico" />
+  <meta name="theme-color" content="#c0392b">
+  <meta name="color-scheme" content="light dark"/>
   <script type="module" src="./index.js"></script>
   <body></body>
 </html>
