--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ionic/core/css/ionic.bundle.css" />
   <link rel="stylesheet" href="./index.css">
-  <link rel="icon" href="./assets/favicon.ico" />
+  <link rel="icon" href="./assets/favicon.jpg" />
   <meta name="color-scheme" content="light dark"/>
   <script type="module" src="./index.js"></script>
   <body></body>
